[package]
name    = "tesseract-sdk-ffi"
version = "0.1.6"
edition = "2021"

[lib]
name      = "tesseract_sdk_ffi"
crate-type = ["staticlib"]

[dependencies]
cxx        = "1.0"
tokio      = { version = "1", features = ["full"] }
matrix-sdk    = { version = "0.17.0", features = ["e2e-encryption", "bundled-sqlite"] }
# Needed for `UtdCause` in the timeline converter — matrix-sdk doesn't
# re-export the crypto types module.
matrix-sdk-base = "0.17.0"
matrix-sdk-ui = { version = "0.17.0" }
# Enable decryption of `m.sticker` events sent in encrypted rooms (MSC2545
# implementations that wrap the media source as an `EncryptedFile`).
ruma          = { version = "0.15", default-features = false, features = ["compat-encrypted-stickers", "unstable-msc3245-v1-compat", "unstable-msc2448"] }
futures-util = "0.3"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url        = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tiny_http     = "0.12"
hostname      = "0.4"
mime          = "0.3"
audiopus      = "0.2"
ogg           = "0.9"
rusqlite      = "0.37"
# Syntax highlighting for chat-message code blocks. Pure-Rust regex engine
# (fancy-regex) to avoid the oniguruma C dependency.
syntect       = { version = "5", default-features = false, features = ["default-fancy"] }