[package]
name    = "tesseract-sdk-ffi"
version = "0.8.10"
edition = "2021"

[lib]
name      = "tesseract_sdk_ffi"
crate-type = ["staticlib"]

[dependencies]
cxx        = "1.0"
tokio      = { version = "1", features = ["full"] }
matrix-sdk    = { version = "0.18", features = ["e2e-encryption", "bundled-sqlite", "local-server", "markdown", "qrcode"] }
qrcode        = "0.14"
# Needed for `UtdCause` in the timeline converter — matrix-sdk doesn't
# re-export the crypto types module.
matrix-sdk-base = "0.18"
matrix-sdk-ui = { version = "0.18" }
# Enable decryption of `m.sticker` events sent in encrypted rooms (MSC2545
# implementations that wrap the media source as an `EncryptedFile`).
ruma          = { version = "0.16", default-features = false, features = ["api", "compat-encrypted-stickers", "unstable-msc3245-v1-compat", "unstable-msc2448"] }
futures-util = "0.3"
parking_lot   = "0.12"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url        = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10" # hash the MXID into Klipy's customer_id (privacy)
reqwest    = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "http2"] }
mime          = "0.3"
audiopus      = "0.2"
ogg           = "0.9"
rusqlite      = "0.37"
# Syntax highlighting for chat-message code blocks. Pure-Rust regex engine
# (fancy-regex) to avoid the oniguruma C dependency.
syntect       = { version = "5", default-features = false, features = ["default-fancy"] }
pulldown-cmark = { version = "0.13", features = ["html"] }
linkify        = "0.11"

[dev-dependencies]
# test-util enables the paused/auto-advancing clock (#[tokio::test(start_paused)]
# + tokio::time::advance) used by the media-gate stall-reclamation tests.
tokio = { version = "1", features = ["test-util"] }
